[gd_scene load_steps=11 format=3 uid="uid://i1kdntbyb308"]

[ext_resource type="Script" path="res://mob.gd" id="1_63do0"]
[ext_resource type="Texture2D" uid="uid://efkitimay6gr" path="res://art/enemyFlyingAlt_1.png" id="1_64lk5"]
[ext_resource type="Texture2D" uid="uid://dwamij76kdn0c" path="res://art/enemyFlyingAlt_2.png" id="2_h600w"]
[ext_resource type="Texture2D" uid="uid://ch35iqh8dq7fh" path="res://art/enemySwimming_1.png" id="3_jabn3"]
[ext_resource type="Texture2D" uid="uid://du5sij2aabd60" path="res://art/enemySwimming_2.png" id="4_os2ys"]
[ext_resource type="Texture2D" uid="uid://bitb1evjv22q6" path="res://art/enemyWalking_1.png" id="5_ws4xe"]
[ext_resource type="Texture2D" uid="uid://bhx8rbxyhhfpo" path="res://art/enemyWalking_2.png" id="6_yd4o6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cmct8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_64lk5")
}, {
"duration": 1.0,
"texture": ExtResource("2_h600w")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jabn3")
}, {
"duration": 1.0,
"texture": ExtResource("4_os2ys")
}],
"loop": true,
"name": &"swim",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ws4xe")
}, {
"duration": 1.0,
"texture": ExtResource("6_yd4o6")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rve5k"]
radius = 44.0
height = 134.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wr3wu"]
radius = 37.0
height = 96.0

[node name="Mob" type="RigidBody2D"]
position = Vector2(14, -2)
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_63do0")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_cmct8")
animation = &"walk"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="FlyHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-5, 0)
shape = SubResource("CapsuleShape2D_rve5k")
debug_color = Color(0.909804, 0, 0.721569, 0.419608)

[node name="SwimHitbox" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wr3wu")
debug_color = Color(0.101961, 0.337255, 1, 0.419608)

[node name="WalkHitbox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wr3wu")
debug_color = Color(0, 0.419608, 0.231373, 0.419608)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
